# crossmint-challenge

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  goal.json  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: lint.sh
src/config/: settings.py
src/models/: astral_objects.py  exceptions.py
src/services/: api_client.py  goal_loader.py  megaverse_creator.py  object_factory.py
src/utils/: retry.py  validators.py
tests/: conftest.py
tests/fixtures/: sample_goal.json
tests/integration/: test_end_to_end.py
tests/test_models/: test_astral_objects.py
tests/test_services/: test_api_client.py  test_object_factory.py
